fix public key not wrapping on firefox update about page

--- a/source/stylesheets/clearcarbon.css
+++ b/source/stylesheets/clearcarbon.css
@@ -5,4 +5,6 @@
 .allow-break {
   text-wrap: unrestricted;
   overflow-wrap: break-word;
+  word-break: break-all;
+  word-wrap: break-word;
 }
